Changed style and Buttons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
     <div class="masthead-content">
       <div class="container">
         <h1 class="masthead-heading mb-0">Dispatch GUI for Discord</h1>
-        <h2 class="masthead-subheading mb-0">The easy way</h2>
-        <a href="https://dl-dispatchgui.variiuz.systems/latest/latest.zip" class="btn btn-primary btn-xl rounded-pill mt-5">DOWNLOAD</a>
+        <h2 class="masthead-subheading mb-0 color-blue">The easy way</h2>
+        <a href="https://dl-dispatchgui.variiuz.systems/latest/latest.zip" class="btn btn-primary btn-xl mt-5">DOWNLOAD</a>
+        <a href="https://discord.gg/invite/Qqqjtsy" class="btn btn-secondary btn-xl mt-5" style="margin-left: 70px;">our Discord</a>
       </div>
     </div>
   </header>
@@ -39,7 +40,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Branches</h2>
+            <h2 class="display-4 color-blue">Branches</h2>
             <p>You can easily manage your Branches and can use all features which are included in the Dispatch.exe but only in a clear view. You have everything in one table and you are able to add multiple Application IDs which you can switch to see the other branches.
             </p>
           </div>
@@ -58,7 +59,7 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">Builds</h2>
+            <h2 class="display-4 color-blue">Builds</h2>
             <p>Mangage your Builds like you would to it in the Console but only easier. You can use all features and have an clear window where you can select what do to like "PUSH", "Mark as corrupt" and all other features. Also uses the Application ID you select.</p>
           </div>
         </div>
@@ -76,7 +77,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Manifests</h2>
+            <h2 class="display-4 color-blue">Manifests</h2>
             <p>Get your Manifests in a easy to read List to make it easier to get what you need.</p>
           </div>
         </div>
@@ -94,7 +95,7 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Config</h2>
+            <h2 class="display-4 color-blue">Config</h2>
             <p>Change your Config how you need them, add new Configs like templates to make creating and publishing faster and easier.</p>
           </div>
         </div>
