--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Simple GUI for Discord Dispath to make your life easier.">
   <meta name="author" content="FrostFightStudios & Variiuz.Systems">
 
   <title>Discord Dispatch GUI - The easy way</title>
